# ConsoleLib

./: .gitignore  Cargo.toml  README.md
examples/: draw_colored_text.rs
src/: lib.rs
