[package]
build = "build.rs"
name = "console-lib"
version = "0.2.0-dev"
edition = "2021"
authors = ["JDDev0 <jddev0@dorneger.at>"]
description = "A very simple TUI library for Linux (ncurses) and Windows (Win-API)"
repository = "https://github.com/JDDev0/ConsoleLib"
license = "MIT"
readme = "README.md"
keywords = ["console", "terminal"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[build-dependencies]
cmake = "0.1.51"

[features]
custom_panic_hook = []
